Terraform/main.tf
provider "aws" {
  region     = "us-west-2"
  access_key = var.aws_access_key
  secret_key = var.aws_secret_key
}

data "aws_vpc" "default" {
  default = true
}
resource "aws_security_group" "web_sg" {
  name        = "web-sg-${var.environment}-${random_id.suffix.hex}"
  description = "Allow SSH and HTTP"
  vpc_id      = data.aws_vpc.default.id
  ...
}

resource "random_id" "suffix" {
  byte_length = 2
}


  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web" {
  ami           = "ami-0caa91d6b7bee0ed0"
  instance_type = "t3.micro"
  key_name      = var.key_name
  security_groups = [aws_security_group.web_sg.name]

  tags = {
    Name = "rahma-devops-instance-${var.environment}"
  }

  user_data = <<-EOF
              #!/bin/bash
              sudo yum update -y
              sudo yum install -y docker
              sudo service docker start
              sudo usermod -a -G docker ec2-user
              docker run -d -p 8080:8080 rahmam123/myapp:latest
              EOF

  root_block_device {
    volume_size = 8
    volume_type = "gp3"
  }
}
